fix gap

--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 450px) {
   .nav {
-    gap: 10px;
+    gap: 20px;
   }
 }
